--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.7.2",
     "koa": "^2.6.2",
-    "nuxt": "^2.4.0"
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.4.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
